feat: add comprehensive security layer with XSS and prompt injection protection
Version: v1.1.0-alpha

Security Enhancements:
- Integrate DOMPurify v3.0.8 for XSS protection
- Create PromptPurify library for prompt injection detection
- Add security signals UI with theme-aware styling
- Implement 7 injection detection categories
- Add comprehensive test suites

UI Improvements:
- Security signals in trail items (only shown for threats/warnings)
- Match indicator theming across all 5 themes
- Progressive disclosure (clean prompts show no signal)
- Theme-aware colors using CSS variables

Technical Changes:
- Add src/js/prompt-purify.js (7.6KB detection library)
- Update game.js with security integration
- Add security signal styles to dos-theme.css (~100 lines)
- Add theme overrides to themes.css (~50 lines)
- Update match indicator styling (~40 lines)

Testing:
- test-xss.html - 8 XSS payload tests
- test-prompt-injection.html - 16 injection tests
- test-security-signals.html - UI demonstration

Documentation:
- 9 new security documentation files (~60KB)
- Updated CHANGELOG.md with v1.1.0-alpha details
- Updated about.html with version history

Files Modified: 8
Files Created: 13

Co-authored-by: Ona <no-reply@ona.com>

--- a/about.html
+++ b/about.html
@@ -303,7 +303,28 @@
 
         <div class="about-section">
             <h2>Version History</h2>
-            <p><strong>v0.2.0</strong> - Current Version</p>
+            <p><strong>v1.1.0-alpha</strong> - Current Version (2025-10-28)</p>
+            <ul>
+                <li><strong>Security:</strong> XSS protection with DOMPurify</li>
+                <li><strong>Security:</strong> Prompt injection detection with PromptPurify</li>
+                <li><strong>UI:</strong> Security signals in trail items (theme-aware)</li>
+                <li><strong>UI:</strong> Match indicator theming across all themes</li>
+                <li><strong>Design:</strong> Progressive disclosure (clean prompts show no signal)</li>
+                <li><strong>Testing:</strong> Comprehensive security test suites</li>
+                <li><strong>Docs:</strong> Complete security documentation</li>
+            </ul>
+            
+            <p><strong>v1.0.0-alpha</strong> - Side Navigation Update (2025-10-25)</p>
+            <ul>
+                <li>Collapsible sidebar navigation (desktop)</li>
+                <li>Auto-hide top bar on scroll</li>
+                <li>Keyboard shortcuts (Ctrl+B, F1, etc.)</li>
+                <li>Mobile-optimized top navigation</li>
+                <li>User identity in input area</li>
+                <li>Cognitive design principles applied</li>
+            </ul>
+            
+            <p><strong>v0.2.0</strong> - Firebase Integration</p>
             <ul>
                 <li>MS-DOS console theme implementation</li>
                 <li>Firebase integration (Auth, Firestore, Analytics)</li>
@@ -333,6 +354,7 @@
                 <li><strong>Google Gemini:</strong> AI haiku generation</li>
                 <li><strong>Firebase:</strong> Backend infrastructure</li>
                 <li><strong>Netlify:</strong> Hosting and deployment</li>
+                <li><strong>DOMPurify (Cure53):</strong> XSS protection</li>
                 <li><strong>IBM VGA Font:</strong> Authentic DOS typography</li>
                 <li><strong>Early Computing Era:</strong> Design inspiration</li>
             </ul>
